# ChangeLog for media-libs/freeimage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.28 2013/06/13 12:29:48 xmw Exp $

  13 Jun 2013; Michael Weber <xmw@gentoo.org> freeimage-3.15.3-r2.ebuild,
  freeimage-3.15.3.ebuild, freeimage-3.15.4.ebuild:
  Depend on SLOT=0 of media-libs/openjpeg (bug 440086)

  28 May 2013; Julian Ospald <hasufell@gentoo.org> freeimage-3.15.4.ebuild,
  +files/freeimage-3.15.4-raw.patch:
  fix building with raw useflag enabled wrt #458516

  21 Mar 2013; Sébastien Fabbro <bicatali@gentoo.org> freeimage-3.15.4.ebuild:
  Keyword amd64-linux and x86-linux

*freeimage-3.15.4 (19 Feb 2013)

  19 Feb 2013; Mike Frysinger <vapier@gentoo.org>
  +files/freeimage-3.15.4-unbundling.patch, +freeimage-3.15.4.ebuild:
  Version bump.

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> freeimage-3.15.3-r2.ebuild:
  Stable for x86, wrt bug #457120

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> freeimage-3.15.3-r2.ebuild:
  Stable for amd64, wrt bug #457120

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -freeimage-3.15.3-r1.ebuild:
  old

*freeimage-3.15.3-r2 (10 Jan 2013)

  10 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/freeimage-3.15.3-r2-unbundling.patch, +freeimage-3.15.3-r2.ebuild:
  Make all the graphics libs optional via USE flags.

*freeimage-3.15.3-r1 (09 Jan 2013)

  09 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/freeimage-3.15.3-r1-unbundling.patch, +freeimage-3.15.3-r1.ebuild:
  Update to EAPI=4.  Add IUSE=static-libs support.  Respect $PKG_CONFIG.  Use
  $CXX to link rather than $CC -lstdc++ since that does not work for everything.
  Respect $CXXFLAGS when linking.

  24 Jul 2012; Tupone Alfredo <tupone@gentoo.org> freeimage-3.15.3.ebuild:
  Add depend on pkgconfig. Bug #427676 by Julian Ospald

  08 Jun 2012; Zac Medico <zmedico@gentoo.org> freeimage-3.15.3.ebuild:
  inherit multilib for get_libdir
