@@ -4,6 +4,7 @@ Hash: SHA256
 AUX freeimage-3.15.3-r1-unbundling.patch 8855 SHA256 e4fcf7c853ffa8ad59f09e09c53c9eb23eb2589ce16e6facb423ac6c74b6eb71 SHA512 d8b69f8add6016ee0204b4916608d17888f6945e8c67cc89b3e5846bbf945443c58a3b096697e0d3018c993fb6b54f59e95db71619fc481c4f1f54da5c10adb1 WHIRLPOOL f7f916fae38ba5630132b67f343fa9e5b95940864bd2bb12340c0be0c3eaefa1a1c6f279f5e03c09f0add70a9ec949bab2ef10e88fcb5bc132d97814e7faf04e
 AUX freeimage-3.15.3-r2-unbundling.patch 17182 SHA256 8fe72d50ca18b98041d70e8bd53dc681b6c59dbdf1ac142e01233009a5e6e452 SHA512 473d9ede61b1edeac78ff7b460949247f245cda67dc514c96f4bde957aa7f94cb4cad39dd7165719b58a956a1ec754204af5798b41ff0bd9379a06fd2b31a910 WHIRLPOOL f15e13ffefa477434970a3172b3c6a464f77ae390ccff9ae1e089721cf926a78ac17967b11c599d4d80ee31231b070f9e604803e956b4db8d565d46f985b015c
 AUX freeimage-3.15.3-unbundling.patch 9053 SHA256 b98d92187eb34518a6219a45f0a71e0cc7909df7583b886069392264d4cc2ff4 SHA512 02f6bfd62bb54370d65660249bf7fa7e27dea0aeeabea782a47748baad119f6635ac5954449989aa487deda27739ad6dd8db42e287e3e1e70b211495b0643650 WHIRLPOOL ed2b4e7c0208a2d8e1177f3ff09e8d2a108ab57721846ec06ee68546ca591929f8df4130b327d66e384b63eef201ee955eb2fe7a5309a9b302494c5ce0c6878e
+AUX freeimage-3.15.4-libjpeg-turbo.patch.gz 5391 SHA256 85370f4c2d9ca469a26e48658cd5231cec5c4300a4a9c9d9e7245a257a833eab SHA512 ffe7c4681926cdf789024f900d027578531969fefb9b2d88b1abbf881934faa7925b1d3287800236662cdb9da4c81c0b6221a929f43ddb8e531f062f49e1bbf3 WHIRLPOOL 57c67d97348ab9c3ce0ee246c788552256b99b3fb50351aeb17378f2a232a5f19aa623fe9ef1fe1445c58f02ea705c5759c933c597ec82c86140154747a6415b
 AUX freeimage-3.15.4-raw.patch 350 SHA256 78bf8997dc5d8da113eb2fdb7d6efbdf97641e1dd4b1d5623bbddf01ffcdde0f SHA512 2429bec7ec8f4963d3b0bd658093e8c3ff83d8ea5d934beb28526b80e89cb3aee6fe849800d80a81680614fa98e962744ced33ee198e04e32fc4be4d105e528b WHIRLPOOL 9de8738e401889fef8b8c95ea83e9322dd2fd2a5c898718696e5c0b6f45308e1ab62ec5a40449205e275f91e5fb1107aa3db055337747d657d3531991442c0f0
 AUX freeimage-3.15.4-unbundling.patch 17182 SHA256 929f45e21c5be7751f21b9f4d98a3c2ae248559ac371e053d66e4d8905eecf78 SHA512 b9f7b2f1767eabe3db44a4328d4211ee80ba719d4f2715f7bb7988f19029d5867da068c78a02f50bf513fc7b88da857795fd0fc0eb9b837f3f999e8951b2debd WHIRLPOOL 62137afc748227b98145c7625fe26348c6bfb21dd569e3b9b095a69c7d503ecfc99c52b40dfdd0dd9b83415fc70f9d03aba168bc98025e6b360522073f1d42b4
 DIST FreeImage3153.pdf 1004540 SHA256 325767978f0208a6dd2d2f6cb1cc184cea6aec843d9948a051c41b6a16284546 SHA512 91775a5ec9227fc5a42431383157d82d2d2bd40b92e234518e4b347cfd20c873fb29ec84289d7bdee127b01c02b9eb5da24c386d6f78a7346684fccee158f939 WHIRLPOOL afdad90143a9ed3a62fa8dd0666355fdeaa3689e15873778b47927f6a6c170da88d7891f94f5889c94a5a54d608845c16a6c033a65afc9477d9deec9f12af5ee
@@ -12,13 +13,13 @@ DIST FreeImage3154.pdf 1007480 SHA256 455b0ba7cf571f3fc3027681a70abf3c2321d0a4fd
 DIST FreeImage3154.zip 5513923 SHA256 eb6361519d33131690a0e726b085a05825e5adf9fb72c752d8d39100e48dc829 SHA512 0db9eb7d0ed8e08e10ff4fa274c4484541ca119c3d437a85fdc3b2d9232bf14a7877c79b1e62c8c99278d7020a9f623c161f2342475f3ee526233404138112cc WHIRLPOOL 2747bb7a35d8de24a1a876616626a9e840495f06da836ce15135aafaa21bc1d8d9cece17f7512424b66edfcc521ed096ea85da5ea5b5b90b4c032bf080356b4d
 EBUILD freeimage-3.15.3-r2.ebuild 2540 SHA256 6d3722b7cafa8388d4f55efd476017a1e5373a49b0fbd18e054ce9a7c15c2020 SHA512 b37788202b29c761568b91b9f6ef6e5e1ad1dd30062b63873396809f1c15f2d10a3d383980e8f24700a4642c35edd70402188db500869050715db1419d21a897 WHIRLPOOL bd6f7a07d7264574ad7d4a481eb6b850ed881af7c6f1e33ceb5b3711334c134eb72ebe66494793d3c1b67b08bf5d22008c051189d229ff009af0c0f09887cc06
 EBUILD freeimage-3.15.3.ebuild 2548 SHA256 56de555ae952db2e4c187fa129b543457ad29e898cef278221748548a0c6f4af SHA512 6add24bbea4c29a2fd80a5f52e2d8b97b8cc94139a541afb5d02fe58d2a9f5992a58f375c037f3a5616f7dd8771b7605bb24171998e09c72e2b61421565098de WHIRLPOOL 930a83378177a9489e9ae20ac9b3d22db4dc732b82d3a806cd0d1fc6103b4c0fb909048a61ecf8d99899dc9ea38a164ff35a10a8d44e2e1019b1b8b7edb3d21d
-EBUILD freeimage-3.15.4.ebuild 2576 SHA256 d8ea7f1a855220fc04a1592503d463c3a080639f50366538120d6ba12e295f3f SHA512 4ba00477ca021a779cd61c7f75e6bdb5564ed9197e0cb77e49c6ae4c1fb11b74ea772ce53273942cae3370266cd1d289aa0c09392e07911ba5548fe9fe79d638 WHIRLPOOL a4d0ea09778024f3b62ca1645b3a737dab43f6094e482a55ff35f70e74790bc77841c315a54b53b50a9cbca86a3335a4d53a6e8dc55a09dd2f6e7a2d028bfbae
-MISC ChangeLog 4210 SHA256 e0df3163a899940e780e058f4af37c998471181dd96715a0237fc340563cfbb6 SHA512 47f013a7d37e673be61582e44d41168cb3eddbd9e90dd0700dbfe531571679e422c236db92c7a4ad98c401cb596219301ae5a25673fab3263befa85db5105635 WHIRLPOOL 1b6948dd2b537029846169f931747317edfb864a60e9eacac7207f18a328cda56928ae950c04f1789abdc6fea2567c177eafd6f986e681d96a50fee8ca4f471e
+EBUILD freeimage-3.15.4.ebuild 2748 SHA256 ca679108a5e86b3d9fd9c23a47568a896373d7817e44945df060c180b148f196 SHA512 d36224f08f46597446ebad0a5176c4a2bacff5c26017ec1f5d6f957cd0e4594441f361447cd3b5851d959479ec48a8e9603a14e1a3fb53da7b16eccc8567a60d WHIRLPOOL 88e44f4ab786bc8c03feae6da0c2c81f0f9cdaa80a48a0412fd59a954fc62df5397e6fdd5d4af6310683a006aef24a04a4a5d5cd678a10e5efa541829d84c502
+MISC ChangeLog 4647 SHA256 84ae9179602276b86e9c1ff4e0d8eef1f7a27bbc163acb84ffde9ce9b005088e SHA512 c1cc19463ba673b8888d59665430339a8d1a63e3656860ac105a124db29fb9925b3cc6e6ac178a1708994a4d963ed5a2bca8bcdcfeb166852197ac088bbf6110 WHIRLPOOL 8e22ade399f176067429d46a9104e06451e5270d32025cfd77f10c262585f52920c6555ce7bb6f8b4b862a0ab637179534856f814dae22bf480a16847c42b3b1
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlG5u1gACgkQknrdDGLu8JDF2wD+JlHBRcU4X22jAfs8KPqTNCsZ
-bz00FOFU3txAd9w1IoQA+gIayx9v6NLd9Jnr44u9OgtrOKtlM0u71iKJmt0ocKiN
-=KZA/
+iF4EAREIAAYFAlIr+lQACgkQoBEVQmGOlx8R0QD+LKeMAssGMi2KnJUxkySjt51s
+wRaEw6QeHBpO8K8HvxMBAIr8CuOYV/2gI/SN1Xx9Yl8MM5WQOixjjG/tDDSuYp0V
+=ENFS
 -----END PGP SIGNATURE-----
