@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/freeimage-3.15.4.ebuild,v 1.4 2013/06/13 12:29:48 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/freeimage-3.15.4.ebuild,v 1.5 2013/09/08 04:19:39 gienah Exp $
 
 EAPI="4"
 
@@ -40,8 +40,10 @@ DEPEND="${RDEPEND}
 S=${WORKDIR}/${MY_PN}
 
 src_prepare() {
+	# Patch from Christian Heimes's fork (thanks) https://bitbucket.org/tiran/freeimageturbo
+	epatch "${FILESDIR}"/${PN}-3.15.4-libjpeg-turbo.patch.gz
 	cd Source
-	cp LibJPEG/{transupp.c,transupp.h,jinclude.h} . || die
+	cp LibJPEG/{transupp.c,transupp.h,jpegcomp.h,jpegint.h,jinclude.h} . || die
 	cp LibTIFF4/{tiffiop,tif_dir}.h . || die
 	rm -rf LibPNG LibMNG LibOpenJPEG ZLib OpenEXR LibRawLite LibTIFF4 LibJPEG || die
 	cd ..
