@@ -10,4 +10,4 @@ RDEPEND=sys-libs/zlib jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/openjpeg:0 ) m
 SLOT=0
 SRC_URI=mirror://sourceforge/freeimage/FreeImage3154.zip mirror://sourceforge/freeimage/FreeImage3154.pdf
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=4fe24d95a61103143f3d6b987b91615a
+_md5_=08577349d1f9f76e11691c44aab72fa2
